# rl-baselines3-zoo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  edit_video.ipynb  enjoy.py  enjoy_real.py  plot_stats.ipynb  pyproject.toml  requirements.txt  run_enjoy.py  run_train.py  setup.py  test_env_gui.py  train.py  train_a1_ppo.sh  train_adapter.py  train_autoencoder.py
blind_walking/: README.md
dgx/: README.md  build_dgx_docker_image.sh  dgx_build_image.sh  dgx_run_image.sh  pbs_build_dgx_docker_image.sh  pbs_run_dgx_docker_image.sh  submit_job.sh  train_a1_ppo.sh
docker/: Dockerfile-dgx  Dockerfile-sbl3  README.md
docs/: export_model.md  gait_control.md  plot_kinematic_stats.md  run_training.md
hyperparams/: ppo.yml
motion_imitation/: __init__.py  run.py
notebooks/: compare_act_foot_contact.ipynb  edit_video.ipynb  export_model.ipynb  inspect_env_randomization.ipynb  inspect_model.ipynb  inspect_stats.ipynb  inspect_urdf.ipynb  plot_ref_act_foot_contact.ipynb  plot_robustness_to_disturbance.ipynb  plot_success_rate_under_noise.ipynb  test_gait_sensor.ipynb  test_historic_sensor.ipynb  test_phase_cpg.ipynb  test_xdim_cpg.ipynb
profile_stats/: README.md  blind_walking_stats  main.py  terrain_aware_walking_stats
quadruped_cpp/: CMakeLists.txt  load_model.cpp  trace_model.py
quadruped_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quadruped_ros/: CMakeLists.txt  package.xml
requirements/: dev.txt  main.txt
scripts/: enjoy_with_logging.py  plot_encoder.py  plot_stats.py  plot_train.py
tests/: test_a1_gym_env.py  (+8 more)
(+406 files in other folders)
