[tool.poetry]
name = "quadruped-rl"
version = "0.1.0"
description = ""
authors = ["dtch1997 <dtch1997@alumni.stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
quadruped_gym = { path = "quadruped-gym", develop = true }
seaborn = "^0.11.2"
PyYAML = "^6.0"
torch = "1.10.1"
sb3-contrib = "^1.4.0"
optuna = "^2.10.0"
wandb = "^0.12.9"
tensorboard = "^2.7.0"

[tool.poe.tasks]
force-cuda113 = "python -m pip install torch==1.10.1+cu113 -f https://download.pytorch.org/whl/torch_stable.html"

[tool.poetry.dev-dependencies]
poethepoet = "^0.12.2"
pre-commit = "^2.17.0"
black = "^21.12b0"
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
